[gd_scene load_steps=5 format=3 uid="uid://yisy7ekslkrk"]

[ext_resource type="Script" path="res://scenes/game/game_over_screen.gd" id="1_ukuh8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q4j3j"]
bg_color = Color(0, 0.419608, 0.686275, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="LabelSettings" id="LabelSettings_tlwlh"]
font_size = 72

[sub_resource type="LabelSettings" id="LabelSettings_slh8r"]
font_size = 48

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ukuh8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.490196)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -245.0
offset_top = -131.0
offset_right = 245.0
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q4j3j")

[node name="GameOverLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -166.0
offset_right = 166.0
offset_bottom = 73.0
grow_horizontal = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_tlwlh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScoreLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -146.5
offset_top = -71.0
offset_right = 146.5
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
text = "High Score: 9999"
label_settings = SubResource("LabelSettings_slh8r")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -146.5
offset_top = -32.5
offset_right = 146.5
offset_bottom = 32.5
grow_horizontal = 2
grow_vertical = 2
text = "Score: 0"
label_settings = SubResource("LabelSettings_slh8r")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -102.0
offset_top = -76.0
offset_right = 102.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "Retry"

[connection signal="pressed" from="Panel/Button" to="." method="_on_reset_button_pressed"]
